--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     @apply w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center rounded-md shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300  z-50;
   }
   .scrollIcon {
-    @apply fixed bottom-20 w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300;
+    @apply fixed bottom-20 w-16 h-16 bg-black text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-40;
   }
   .resumeLi {
     @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
@@ -36,6 +36,17 @@ body {
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
-/* .content:first-child {
+
+.tagcloud:nth-child(2) {
   display: none;
-} */
+}
+.tagcloud {
+  margin: 0 auto;
+}
+.tagcloud--item {
+  font-size: 20px;
+  line-height: 28px;
+}
+.tagcloud--item:hover {
+  color: #5de4c7;
+}
