--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@ body {
 
 @layer components {
   .bannerIcon {
-    @apply w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center rounded-md shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300  z-50;
+    @apply w-16 h-16 bg-white dark:bg-black dark:bg-opacity-25 text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-md dark:shadow-shadowOne shadow-shadowTwo dark:hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-10;
   }
   .scrollIcon {
-    @apply fixed bottom-20 w-16 h-16 bg-black text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-40;
+    @apply fixed bottom-20 w-16 h-16 bg-white dark:bg-bodyColor text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowTwo dark:shadow-shadowOne  hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-40;
   }
   .resumeLi {
     @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
@@ -23,10 +23,10 @@ body {
     @apply bg-black bg-opacity-40;
   }
   .contactInput {
-    @apply w-full h-12 rounded-lg border-b-[1px] border-b-gray-600 bg-[#191b1e] text-lightText px-4 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300;
+    @apply w-full h-12 rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] text-darkText dark:text-lightText px-4 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300;
   }
   .contactTextArea {
-    @apply w-full rounded-lg border-b-[1px] border-b-gray-600 bg-[#191b1e] text-lightText px-4 py-2 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300 resize-none;
+    @apply w-full rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] px-4 py-2 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300 resize-none;
   }
 }
 
@@ -47,6 +47,6 @@ body {
   font-size: 20px;
   line-height: 28px;
 }
-.tagcloud--item:hover {
+/* .tagcloud--item:hover {
   color: #5de4c7;
-}
+} */
