--- a/src/index.css
+++ b/src/index.css
@@ -1,52 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-  scroll-behavior: smooth;
-  transition: all 0.5s ease-in-out;
+    scroll-behavior: smooth;
+    transition: all 0.5s ease-in-out;
 }
 
 @layer components {
-  .bannerIcon {
-    @apply w-16 h-16 bg-white dark:bg-black dark:bg-opacity-25 text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-md dark:shadow-shadowOne shadow-shadowTwo dark:hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-10;
-  }
-  .scrollIcon {
-    @apply fixed bottom-20 w-16 h-16 bg-white dark:bg-bodyColor text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowTwo dark:shadow-shadowOne  hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-40;
-  }
-  .resumeLi {
-    @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
-  }
-  .bgOpacity {
-    @apply bg-black bg-opacity-40;
-  }
-  .contactInput {
-    @apply w-full h-12 rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] text-darkText dark:text-lightText px-4 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300;
-  }
-  .contactTextArea {
-    @apply w-full rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] px-4 py-2 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300 resize-none;
-  }
+    .bannerIcon {
+        @apply w-16 h-16 bg-white dark:bg-black dark:bg-opacity-25 text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-md dark:shadow-shadowOne shadow-shadowTwo dark:hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-10;
+    }
+
+    .scrollIcon {
+        @apply fixed bottom-20 w-16 h-16 bg-white dark:bg-bodyColor text-gray-700 dark:text-gray-200 text-xl inline-flex items-center justify-center rounded-full shadow-shadowTwo dark:shadow-shadowOne  hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-40;
+    }
+
+    .resumeLi {
+        @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
+    }
+
+    .bgOpacity {
+        @apply bg-black bg-opacity-40;
+    }
+
+    .contactInput {
+        @apply w-full h-12 rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] text-darkText dark:text-lightText px-4 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300;
+    }
+
+    .contactTextArea {
+        @apply w-full rounded-lg  bg-[#e7e7e7] dark:bg-[#191b1e] px-4 py-2 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300 resize-none;
+    }
+
+    .skillsCard {
+        @apply py-4 px-6 bg-white dark:bg-black dark:bg-opacity-25 text-gray-700 dark:text-gray-200 text-xl flex items-center justify-center rounded-md dark:shadow-shadowOne shadow-shadowTwo dark:hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300 z-10;
+    }
 }
 
 .active {
-  color: #00e7b5;
+    color: #00e7b5;
 }
+
 .scrollbar-hide::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .tagcloud:nth-child(2) {
-  display: none;
+    display: none;
 }
+
 .tagcloud {
-  margin: 0 auto;
+    margin: 0 auto;
 }
+
 .tagcloud--item {
-  font-size: 20px;
-  line-height: 28px;
+    font-size: 20px;
+    line-height: 28px;
 }
+
 /* .tagcloud--item:hover {
   color: #5de4c7;
 } */
